Fix text alignment in nav.

--- a/style2.css
+++ b/style2.css
@@ -133,6 +133,10 @@ header {
 }
 
 header nav {
+  background-color: var(--color-client-spec-1);
+}
+
+header nav .container {
   padding: 0.2rem;
   display: flex;
   flex-direction: row;
@@ -140,7 +144,6 @@ header nav {
   align-items: baseline;
   font-size: 1rem;
   line-height: 1rem;
-  background-color: var(--color-client-spec-1);
 }
 
 header nav ul {
@@ -290,6 +293,8 @@ footer .container ul li {
 
 .cart-total {
   margin-bottom: 1rem;
+  width: 15rem;
+  float: right;
 }
 
 .form-small {
